--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Importa Firebase desde un CDN compatible con módulos -->
   <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
-  <script type="module" defer src="script.js"></script> <!-- Usa "type=module" aquí también -->
+  <script type="module" defer src="index.js"></script> <!-- Usa "type=module" aquí también -->
 </head>
 <body>
   <h1>CRUD con Firebase</h1>
